Update notes and assignments

--- a/Lab/2.5 Visualizing Relationships Between Groups Lab.ipynb
+++ b/Lab/2.5 Visualizing Relationships Between Groups Lab.ipynb
@@ -29,21 +29,14 @@
     "|loan_status (target variable)|Loan approval status: 1 = approved; 0 = rejected|Integer\n",
     "\n",
     "Visualize the relationship between age, sex and 5 other features with `loan_status`.  Which features seem to drive the model's decision to grant a loan?  Which seem unrelated?  Should the financial institution be concerned about potential legal trouble?  Make sure to justify your answers with specific references to your visualizations.\n",
-    "\n"
+    "\n",
+    "**You must use quantitative visualizations (boxplots or histograms) when comparing quantitative features.  DO NOT categorize quantitative features.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d40c81d3-7bc6-43c9-a97d-d1970621ec84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96fff61d-ba89-4c74-8712-a5abe4cc1ecf",
+   "id": "3987d993-7823-42f2-8f5f-b1e084a40ff3",
    "metadata": {},
    "outputs": [],
    "source": []
