--- a/Lab/3.3 Visualizing Relationships Between Quantitative Features Lab-Copy1.ipynb
+++ b/Lab/3.3 Visualizing Relationships Between Quantitative Features Lab-Copy1.ipynb
@@ -30,11 +30,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cdcec0fa-fb4d-4bf1-8609-3928093f681d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HoursWorked</th>\n",
+       "      <th>FocusScore</th>\n",
+       "      <th>ProductivityScore</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>YearsAtCompany</th>\n",
+       "      <th>TeamMeetingsPerWeek</th>\n",
+       "      <th>DeskLocation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42.4</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3127.96</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Open Plan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34.0</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>4742.60</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Private Office</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47.2</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2044.73</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Remote</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38.4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5818.92</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Private Office</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36.4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1841.31</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Remote</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   HoursWorked  FocusScore  ProductivityScore   Department  YearsAtCompany  \\\n",
+       "0         42.4         6.3            3127.96  Engineering              17   \n",
+       "1         34.0         7.2            4742.60           HR               8   \n",
+       "2         47.2         5.6            2044.73        Sales              15   \n",
+       "3         38.4         9.0            5818.92           HR               5   \n",
+       "4         36.4         2.5            1841.31        Sales               9   \n",
+       "\n",
+       "   TeamMeetingsPerWeek    DeskLocation  \n",
+       "0                    0       Open Plan  \n",
+       "1                    6  Private Office  \n",
+       "2                    3          Remote  \n",
+       "3                    6  Private Office  \n",
+       "4                    6          Remote  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('Employee_productivity.csv')\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
